# task1week5

./: CMakeLists.txt  Chapter  2 task 2.cpp  Chapter 1 task 1.cpp  Chapter 1 task 10.cpp  Chapter 1 task 2.cpp  Chapter 1 task 3.cpp  Chapter 1 task 4.cpp  Chapter 1 task 5.cpp  Chapter 1 task 6.cpp  Chapter 1 task 7.cpp  Chapter 1 task 8.cpp  Chapter 1 task 9.cpp  Chapter 2  task 1.cpp  Chapter 2  task 7.cpp  Chapter 2  task 8.cpp  Chapter 2  task 9.cpp  Chapter 2 task 10 .cpp  Chapter 2 task 3 .cpp  Chapter 2 task 4.cpp  Chapter 2 task 5 .cpp  Chapter 2 task 6.cpp  Chapter 3 task 1 .cpp  Chapter 3 task 10.cpp  Chapter 3 task 2.cpp  Chapter 3 task 3.cpp  Chapter 3 task 4.cpp  Chapter 3 task 5.cpp  Chapter 3 task 6.cpp  Chapter 3 task 7.cpp  Chapter 3 task 8.cpp  Chapter 3 task 9.cpp  main.cpp
