cmake_minimum_required(VERSION 3.29)
project(untitled)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled main.cpp
        task1.cpp
        task1.h
        "Chapter 1 task 1.cpp"
        "Chapter 1 task 3.cpp"
        "Chapter 1 task 4.cpp"
        "Chapter 1 task 5.cpp"
        "Chapter 1 task 6.cpp"
        "Chapter 1 task 7.cpp"
        "Chapter 1 task 8.cpp"
        "Chapter 1 task 9.cpp"
        "Chapter 1 task 10.cpp"
)
